Fix: changed the projects links alignment

--- a/src/components/Projects/ProjectCard/style.scss
+++ b/src/components/Projects/ProjectCard/style.scss
@@ -20,5 +20,9 @@
         ul {
             padding: 9px 25px;
         }
+
+        .Link_Container {
+            display: flex;
+        }
     }
 }
